[package]
name = "solace-provision-rust"
version = "0.1.0"
authors = ["Kegan Holtzhausen <Kegan.Holtzhausen@kindredgroup.com>"]
edition = "2018"

[dependencies]
solace_semp_client = { git = "https://github.com/unixunion/rust_solace_semp_client.git" }
hyper = "0.11.6"
colored = "1.7"
tokio-core = "0.1.6"
futures = "0.1"
serde_json = "1.0"