[package]
name = "solace-provision-rust"
version = "0.1.0"
authors = ["Kegan Holtzhausen <Kegan.Holtzhausen@kindredgroup.com>"]
edition = "2018"

[dependencies]

solace_semp_client = { git = "https://github.com/unixunion/rust_solace_semp_client.git", tag="9.1.7"}
hyper = "0.11.6"
colored = "1.7"
tokio-core = "0.1.6"
futures = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
clap = "2.32.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

